<resources>
    <string name="app_name">That\'s News To Me</string>
    <string name="settings">Settings</string>

    <string name="pref_filter_label">Filter</string>
    <string name="pref_filter_key" translatable="false">filter</string>

    <string name="pref_star_rating_label">Star Rating</string>
    <string name="pref_star_rating_key" translatable="false">star_rating</string>
    <string name="pref_star_rating_default" translatable="false">3</string>


    <string name="pref_page_configuration_key" translatable="false">page_configuration</string>
    <string name="pref_page_configuration_label">Page Configuration</string>

    <string name="pref_page_size_label">Page Size</string>
    <string name="pref_page_size_key" translatable="false">page_size</string>
    <string name="pref_page_size_default" translatable="false">10</string>

    <string name="pref_order_by_label">Order By</string>
    <string name="pref_order_by_key" translatable="false">order_by</string>
    <string name="pref_order_by_default" translatable="false">@string/pref_order_by_newest_value</string>

    <string name="pref_order_by_newest_label">Newest</string>
    <string name="pref_order_by_newest_value" translatable="false">newest</string>

    <string name="pref_order_by_oldest_label">Oldest</string>
    <string name="pref_order_by_oldest_value" translatable="false">oldest</string>

    <string name="pref_order_by_relevance_label">Relevance</string>
    <string name="pref_order_by_relevance_value" translatable="false">relevance</string>
    <string name="search_topic">Search for a topic</string>
    <string name="no_connection">There is no connection.</string>
    <string name="no_result">There is no result for \'%s\'</string>
</resources>
